--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                                 <a href="javascript:void(0)" class="nounderline" data="collection">Collection</a>
                         </div>
 
+                        <div class="orbitron">Systems</div>
+                        <div class="flexcolumn" style="margin:8px;">
+                                <a href="javascript:void(0)" class="nounderline" data="architecture">Architecture</a>
+                        </div>
+
                         <div class="orbitron">Background</div>
                         <div class="flexcolumn" style="margin:8px;">
                                 <a href="javascript:void(0)" class="nounderline" data="creator">Creator</a>
