--- a/html/schemas/architecture.html
+++ b/html/schemas/architecture.html
@@ -1,1 +1,1 @@
-The library is developed through the L(W)AMP stack : Linux/Windows, Apache server, MySQL, and PHP.
+Utilizing the Laragon local development environment, the library is developed through the L(W)AMP stack : Linux/Windows, Apache server, MySQL, and PHP. 
