--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                         <div class="orbitron">Overview</div>
                         <div class="flexcolumn" style="margin:8px;">
                                 <a href="javascript:void(0)" class="nounderline" data="summary">Summary</a>
+                                <a href="javascript:void(0)" class="nounderline" data="curation">Curation</a>
                                 <a href="javascript:void(0)" class="nounderline" data="collection">Collection</a>
                         </div>
 
