--- a/html/curation.html
+++ b/html/curation.html
@@ -1,5 +1,5 @@
 <div class="orbitron">Dataset Curation</div>
 <div class="m24">
-        <p>A dataset which passes for implementation is one where data structure is clean &amp; consistent, has no usage-limitations for how anything is built around it, and is rich in media if any media is involved. Easy-pick examples include Metropolitan Museum of Art and The Smithsonian since their institutional data is well structured, their usage-restrictions are clearly stated; and even after data-pruning of media-poor records, their record counts remain in abundance.</p>
-        <p></p>
+        <p>A dataset which passes for implementation is one where data structure is clean &amp; consistent, has no usage-limitations for how anything is built around it, and is rich in media if any media is involved. </p>
+        <p>Easy-pick examples include Metropolitan Museum of Art and The Smithsonian since their institutional data is well structured, their usage-restrictions are clearly stated; and even after data-pruning of media-poor records, their record counts remain in abundance. For specialty data such as Mediawiki where there may be dependencies such as Mediawiki extensions, those which pass curation are the ones where the extension(s) do not conflict with the custom-parser which is used to interpret all Mediawiki implementations.</p>
 </div>
