--- a/html/curation.html
+++ b/html/curation.html
@@ -19,5 +19,5 @@
 <div class="orbitron">Filtration and Navigation</div>
 <div class="m24">
        <p>The creation of filters and navigation options is a curatorial process at database level. In the case of representing organized museum objects from data of an institution such as Harvard, select object keys from the original json such as &quot;classifications&quot;, &quot;people&quot;, and &quot;type&quot;, are prioritized and migrated to relational tables in the database.</p>
-       <p>For Mediawiki dataset integrations, curation is the determination of page and category visibility. Unlike databases with unique schematics, mediawiki filtration and navigation happens directly in the front-end with a <em>table of the contents</em> layout. This simple UI decision changes the way that a wikipedia page is viewed, allowing for organized page indexing that is always visible.</p>
+       <p>For Mediawiki dataset integrations, curation is the determination of page and category visibility. Unlike databases with unique schematics, mediawiki filtration and navigation happens directly in the front-end with a <em>table of the contents</em> layout. This simple UI decision changes the way that a wikipedia page is viewed, allowing for page indexing that is always accessible.</p>
 </div>
