--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                         <div class="orbitron">Systems</div>
                         <div class="flexcolumn" style="margin:8px;">
                                 <a href="javascript:void(0)" class="nounderline" data="architecture">Architecture</a>
+                                <a href="javascript:void(0)" class="nounderline" data="ingestion">Ingestion/Synchronization</a>
                         </div>
 
                         <div class="orbitron">Background</div>
