--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
                 <div class="tocbox flexcolumn">
                         <div class="orbitron">Overview</div>
                         <div class="flexcolumn" style="margin:8px;">
-                                <a href="javascript:void(0)" class="nounderline" data="summary">Summary</a>
-                                <a href="javascript:void(0)" class="nounderline" data="curation">Curation</a>
-                                <a href="javascript:void(0)" class="nounderline" data="collection">Collection</a>
+                                <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="summary">Summary</a></div>
+                                <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="curation">Curation</a></div>
+                                <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="collection">Collection</a></div>
                         </div>
 
                         <div class="orbitron">Systems</div>
                         <div class="flexcolumn" style="margin:8px;">
-                                <a href="javascript:void(0)" class="nounderline" data="architecture">Architecture</a>
-                                <a href="javascript:void(0)" class="nounderline" data="ingestion">Ingestion/Synchronization</a>
+                                <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="architecture">Architecture</a></div>
+                                <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="ingestion">Ingestion / Synchronization</a></div>
                         </div>
 
                         <div class="orbitron">Background</div>
