--- a/html/ingestion.html
+++ b/html/ingestion.html
@@ -11,5 +11,9 @@
 <div class="orbitron">Synchronization</div>
 <div class="m24">
         <p>The php synchronization script for datasets from APIs is ideally a refactored version of the ingestion script which automatically inserts new records into the database or updates them directly instead of saving them as JSON files. </p>
-        <p> Synchronization for Mediawiki datasets are developed as script extensions which run with the Mediawiki php library.</p>
+        <p>Synchronization for Mediawiki datasets are developed as maintenance script extensions which run with the Mediawiki php library:</p>
+                <ul>
+                        <li>The fetching script downloads all pages created or updated from within range of a specified date and saves them all as individual JSON files.</li>
+                        <li>The create/update script reads each JSON file and creates non-existing pages from them or updates any pages where the local file is older.</li>
+                </ul>
 </div>
