--- a/html/ingestion.html
+++ b/html/ingestion.html
@@ -14,6 +14,6 @@
         <p>Synchronization for Mediawiki datasets are developed as maintenance script extensions which run with the Mediawiki php library:</p>
                 <ul>
                         <li>The fetching script downloads all pages created or updated from within range of a specified date and saves them all as individual JSON files.</li>
-                        <li>The create/update script reads each JSON file and creates non-existing pages from them or updates any pages where the local file is older.</li>
+                        <li>The create/update script reads each JSON file and creates non-existing pages from them or updates any pages where the local revision is older.</li>
                 </ul>
 </div>
