--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <div class="tocbox flexcolumn">
                         <div class="orbitron">Overview</div>
                         <div class="flexcolumn" style="margin:8px;">
+                                <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="terminology">Terminology</a></div>
                                 <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="summary">Summary</a></div>
                                 <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="curation">Curation</a></div>
                                 <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="collection">Collection</a></div>
