--- a/html/terminology.html
+++ b/html/terminology.html
@@ -1,4 +1,4 @@
-A few terms are informally used frequently in this documentation:
+<p>A few terms are informally used frequently in this documentation:</p>
 
 <table class="generaltable">
         <tr>
