--- a/html/terminology.html
+++ b/html/terminology.html
@@ -1,6 +1,6 @@
 <p>A few terms are informally used frequently in this documentation:</p>
 
-<table class="generaltable">
+<table class="generaltable no-scale">
         <tr>
                 <td class="tdr">Dataset</td>
                 <td class="tdl">A collection of records that is usually gathered from an external source and stored into a database for reading.</td>
