--- a/html/ingestion.html
+++ b/html/ingestion.html
@@ -1,6 +1,6 @@
 <div class="orbitron">Ingestion</div>
 <div class="m24">
-        <p>The general flow of dataset ingestion from the server to local disk is:</p>
+        <p>The general flow of dataset ingestion from an API to local disk:</p>
                 <ul>
                         <li>Run a php script which iterates through facets of an API and saves each record as an individual JSON file.</li>
                         <li>Create the database and its schematics based on curatorial analysis for the structure of a record's JSON data.</li>
