--- a/html/ingestion.html
+++ b/html/ingestion.html
@@ -19,7 +19,7 @@
 <div class="m24">
         <p>The php synchronization script for datasets from APIs is ideally a refactored version of the ingestion script which automatically inserts new records into the database or updates them directly instead of saving them as JSON files. </p>
         <p>
-                Some synchronization involves clearing an entire database and reinserting data from a freshly downloaded dump. Implemented datasets which synchronize with this method include Rebrickable, PokemonTCG, and Scryfall, as they regularly dump their databases.
+                Some synchronization involves clearing an entire database and reinserting data from a freshly downloaded dump. Implemented datasets which synchronize using this method include Rebrickable, PokemonTCG, and Scryfall, as they regularly dump their databases.
         </p>
         <p>Synchronization for Mediawiki datasets are developed as maintenance script extensions which run with the Mediawiki php library:</p>
                 <ul>
