--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                         <div class="flexcolumn" style="margin:8px;">
                                 <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="architecture">Architecture</a></div>
                                 <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="ingestion">Ingestion / Synchronization</a></div>
+                                <div class="flexrow"><a href="javascript:void(0)" class="nounderline" data="indexing">Indexing / Performance</a></div>
                         </div>
 
                         <div class="orbitron">Background</div>
