--- a/html/ingestion.html
+++ b/html/ingestion.html
@@ -17,7 +17,11 @@
 </div>
 <div class="orbitron">Synchronization</div>
 <div class="m24">
-        <p>The php synchronization script for datasets from APIs is ideally a refactored version of the ingestion script which automatically inserts new records into the database or updates them directly instead of saving them as JSON files. </p>
+        <p>
+                The library has a synchronization panel in the front-end which polls a log file for progress while panel-controls dictate asynchronous commands to the command line interface. 
+                There are currently no automation tools for synchronization such as cron jobs since every sync job as of yet requires monitoring for errors on edge cases.
+        </p>
+        <p>A php synchronization script for datasets from APIs is ideally a refactored version of the ingestion script which automatically inserts new records into the database or updates them directly instead of saving them as JSON files. </p>
         <p>
                 Some synchronization involves clearing an entire database and reinserting data from a freshly downloaded dump. Implemented datasets which synchronize using this method include Rebrickable, PokemonTCG, and Scryfall, as they regularly dump their databases.
         </p>
