--- a/html/terminology.html
+++ b/html/terminology.html
@@ -2,6 +2,10 @@
 
 <table class="generaltable no-scale">
         <tr>
+                <td class="tdr">&quot;The library&quot;</td>
+                <td class="tdl">Internet Public Library.</td>
+        </tr>
+        <tr>
                 <td class="tdr">Dataset</td>
                 <td class="tdl">A collection of records that is usually gathered from an external source and stored into a database for reading.</td>
         </tr>
