--- a/html/architecture.html
+++ b/html/architecture.html
@@ -1,1 +1,11 @@
-Utilizing the Laragon local development environment, the library is developed through the L(W)AMP stack : Linux/Windows, Apache server, MySQL, and PHP. 
+<div class="orbitron">Environment/Index Page</div>
+<div class="m24">
+        <p>Utilizing the Laragon local development environment, the library is developed through the L(W)AMP stack : Linux/Windows, Apache server, MySQL, and PHP. </p>
+        <p>
+                The flow of the index page is simple:
+        </p>
+        <ul>
+                <li>Start a php session.</li>
+                <li>Render index.php</li>
+        </ul>
+</div>
