--- a/html/architecture.html
+++ b/html/architecture.html
@@ -1,6 +1,10 @@
-<div class="orbitron">Environment/Index Page</div>
+<div class="orbitron"> Development Environment</div>
 <div class="m24">
-        <p>Utilizing the Laragon local development environment, the library is developed through the L(W)AMP stack : Linux/Windows, Apache server, MySQL, and PHP. </p>
+        <p>Utilizing the Laragon local development environment, the library is maintained through the L(W)AMP stack : Linux/Windows, Apache server, MySQL, and PHP. Visual Code is used with code coloring necessary for the languages of CSS, HTML, PHP, and Javascript. Whatever version of Gemini that is the latest in Google AI Studio is the LLM of use for coding assistance. If Gemini is temporarily rate limited, then Chat GPT is used for small jobs. Github is bound to Visual Studio Code for quick pushes as a means for critical code backup and restoration.</p>
+        
+</div>
+<div class="orbitron">Index Page</div>
+<div class="m24">
         <p>
                 The flow of the index page is simple:
         </p>
