--- a/html/architecture.html
+++ b/html/architecture.html
@@ -5,7 +5,7 @@
 </div>
 <div class="orbitron">Databases</div>
 <div class="m24">
-        <p>Each dataset implementation has its own database in MySQL. Mediawiki datasets share a redundant schema that is copied in structure for every new implementation. All other databases are uniquely created based on the structure of meta-data that is retrieved from an API or data source, which was briefly touched upon in the <a href="javascript:void(0)" class="nounderline" class="pagelink" data="curation" style="font-weight: normal;"></a>curation page</a>. This causes the indexing to also be unique between each implementation; utilizing b-tree, full-text, and composite indexes where appropriate.</p>
+        <p>Each dataset implementation has its own database in MySQL. Mediawiki datasets share a redundant schema that is copied in structure for every new implementation. All other databases are uniquely created based on the structure of meta-data that is retrieved from an API or data source, mentioned in the <a href="javascript:void(0)" class="nounderline" class="pagelink" data="curation" style="font-weight: normal;">curation page</a>. This causes the indexing to also be unique between each implementation; utilizing b-tree, full-text, and composite indexes where appropriate.</p>
         
 </div>
 <div class="orbitron">Index Page</div>
