--- a/html/architecture.html
+++ b/html/architecture.html
@@ -6,7 +6,6 @@
 <div class="orbitron">Databases</div>
 <div class="m24">
         <p>Each dataset implementation has its own database in MySQL. Mediawiki datasets share a redundant schema that is copied in structure for every new implementation. All other databases are uniquely created based on the structure of meta-data that is retrieved from an API or data source, mentioned in the <a href="javascript:void(0)" class="nounderline pagelink"  data="curation" style="font-weight: normal;">curation page</a>. This causes the indexing to also be unique between each implementation; utilizing b-tree, full-text, and composite indexes where appropriate.</p>
-        
 </div>
 <div class="orbitron">Index Page</div>
 <div class="m24">
@@ -17,4 +16,10 @@
                 <li>Start a php session.</li>
                 <li>Render index.php</li>
         </ul>
+</div>
+<div class="orbitron">User Interface</div>
+<div class="m24">
+        <p>
+                The interactive components in the UI of an implementation which behave as catalysts for queries are filter toggles, category links, and search field.
+        </p>
 </div>
