--- a/html/architecture.html
+++ b/html/architecture.html
@@ -10,7 +10,7 @@
 <div class="orbitron">Index Page</div>
 <div class="m24">
         <p>
-                The flow of the index page is simple:
+                The flow of the index page:
         </p>
         <ul>
                 <li>Start a php session.</li>
