--- a/html/ingestion.html
+++ b/html/ingestion.html
@@ -5,7 +5,7 @@
                         <li>Run a php script which iterates through facets of an API and saves each record as an individual JSON file.</li>
                         <li>Create the database and its schematics based on curatorial analysis for the structure of a record's JSON data.</li>
                         <li>Run a php script which inserts each record from the JSON files into the database.</li>
-                        <li>Export filter/category data into a JSON file for the front-end to read on page-load.</li>
+                        <li>Export filter/category data into a JSON cache file for the front-end to read on page-load and parse as html.</li>
                 </ul>
         <p>
                 Mediawiki datasets use the following process for ingestion:
