--- a/html/terminology.html
+++ b/html/terminology.html
@@ -17,4 +17,8 @@
                 <td class="tdr">Implementation</td>
                 <td class="tdl">A dataset that is fully functional and presented in the library.</td>
         </tr>
+        <tr>
+                <td class="tdr">&quot;Unique&quot;</td>
+                <td class="tdl">Used in the case of <em>unique implementation</em>, where unique is of bespoke data structure. This is in contrast to Mediawiki data which is consistent across all datasets and is declared by the framework's table creation script.</td>
+        </tr>
 </table>
