--- a/html/terminology.html
+++ b/html/terminology.html
@@ -19,6 +19,6 @@
         </tr>
         <tr>
                 <td class="tdr">&quot;Unique&quot;</td>
-                <td class="tdl">Used in the case of <em>unique implementation</em>, where <b>unique</b> is of bespoke data structure. This is in contrast to Mediawiki data which is consistent across all datasets and is declared by the framework's table creation script.</td>
+                <td class="tdl">Used in the case of <em>unique implementation</em>, where <b>unique</b> is of bespoke data structure. This is in contrast to Mediawiki datasets which are declared by the framework's table creation script.</td>
         </tr>
 </table>
