--- a/html/terminology.html
+++ b/html/terminology.html
@@ -21,4 +21,13 @@
                 <td class="tdr">&quot;Unique&quot;</td>
                 <td class="tdl">Used in the case of <em>unique implementation</em>, where <b>unique</b> is of bespoke data structure. This is in contrast to Mediawiki datasets which are declared by the framework's table creation script.</td>
         </tr>
+
+        <tr>
+                <td class="tdr">Filter</td>
+                <td class="tdl">A user-interface element commonly declared by button or title, that is used as toggle data for queries.</td>
+        </tr>
+        <tr>
+                <td class="tdr">Category-Link</td>
+                <td class="tdl">A user-interface element commonly declared by title, that is used to trigger category browsing queries.</td>
+        </tr>
 </table>
