--- a/html/userinterface.html
+++ b/html/userinterface.html
@@ -37,6 +37,6 @@
                 Lights
         </div>
         <div class="m24">
-                Lights is somewhat an inverse of shadows theme. It is the light theme of the site. The background is the inverse of the grayscale space background, which makes it resemble white marble. The space theme loses its coherency in this theme. The panels are tinted with creamy orange to represent brightness and warmth.
+                Lights is somewhat an inverse of shadows theme. It is the light theme of the site. The background is the inverse of the grayscale space background, which makes it resemble white marble. The space aesthetic loses its coherency in this theme. The panels are tinted with creamy orange to represent brightness and warmth.
         </div>
 </div>
